--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
 version: '3'
-
 services:
   nexus:
     image: ci-tool-stack/nexus3:${VERSION:-latest}
     build:
       context: .
+      dockerfile: Dockerfile.${VERSION:-latest}
       args:
         - http_proxy=$http_proxy
         - https_proxy=$https_proxy
